# league-of-legend

./: ..env.un~  .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  docker-compose.yml  explore_ugg.py  handoff.md  main.py  pyproject.toml  server.py  verify_stats.py  verify_step4.py
advisor/: assemble.py  comp_adjust.py  comp_build.py  role_inference.py  session.py  tips.py
cache/: ddragon_16.11.1_zh_CN.json  ddragon_item_16.11.1_zh_CN.json  ddragon_runesReforged_16.11.1_zh_CN.json  debug_opgg_gangplank_top.html  last_session.json
cache/lolalytics_raw/: gen_qwik_0.json  general_build_full.html  step1_page_html.txt  step3_vs_page_html.txt  vs_build_expanded.json  vs_build_full.html  vs_qwik_0.json
cache/stats/: loly_aatrox_top_emerald_plus.json  loly_aatrox_top_emerald_plus_quinn.json  loly_aatrox_top_emerald_plus_renekton.json  loly_aatrox_top_emerald_plus_vayne.json  loly_aatrox_top_emerald_plus_zaahen.json  loly_ahri_middle_emerald_plus_zed.json  loly_gangplank_top_emerald_plus.json  loly_gangplank_top_emerald_plus_darius.json  loly_gangplank_top_emerald_plus_viktor.json  loly_hecarim_jungle_emerald_plus.json  loly_hecarim_jungle_emerald_plus_darius.json  loly_hecarim_jungle_emerald_plus_leesin.json  loly_jax_top_emerald_plus_gragas.json  loly_renekton_top_emerald_plus.json  loly_renekton_top_emerald_plus_darius.json  opgg_gangplank_top_gold_plus.json  (+3 more)
capture/: lcu.py
config/: comp_scoring.json
data/: ddragon.py
fixtures/: sample_5v5.json
render/: terminal.py
stats/: lolalytics.py  opgg.py  provider.py  ugg.py
web/: app.js  index.html
(+1 files in other folders)
