[project]
name = "lol-draft-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
# agent.py 专用：LCU 进程检测。server 端 / Docker 不需要。
# 本地全量安装: uv sync  (dependency-groups 默认全装)
# Docker 构建:  uv sync --no-group agent
agent = [
    "psutil>=7.2.2",
]
